--- a/phonebill-gwt/src/main/webapp/GridInDot.html
+++ b/phonebill-gwt/src/main/webapp/GridInDot.html
@@ -11,14 +11,9 @@
     <script src="http://cpettitt.github.io/project/dagre-d3/v0.1.5/dagre-d3.min.js"></script>
 
     <script>
-        window.onload = function () {
+        function drawDot(dot) {
             // Parse the DOT syntax into a graphlib object.
-            var g = graphlibDot.parse(
-                    'digraph {\n' +
-                    '    a -> b;\n' +
-                    '    b -> c;\n' +
-                    '    }'
-            );
+            var g = graphlibDot.parse(dot);
 
             // Render the graphlib object using d3.
             var renderer = new dagreD3.Renderer();
@@ -30,6 +25,12 @@
             var bbox = svg.getBBox();
             svg.style.width = bbox.width + 40.0 + "px";
             svg.style.height = bbox.height + 40.0 + "px";
+        }
+
+        window.onload = function() {
+            d3.text("grid.dot", "text/plain", function(error, data) {
+                drawDot(data)
+            });
         }
     </script>
     <style>
