--- a/phonebill-gwt/src/main/webapp/GridInDot.html
+++ b/phonebill-gwt/src/main/webapp/GridInDot.html
@@ -1,63 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
 <!--
-    From http://stackoverflow.com/questions/22595493/reading-dot-files-in-javascript-d3
+   Derived from http://cpettitt.github.io/project/dagre-d3/latest/demo/interactive-demo.html
 -->
-<head>
-    <meta charset="UTF-8">
-    <title>Rendering a grid of text from dot using JavaScript</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
-    <script src="http://cpettitt.github.io/project/graphlib-dot/v0.4.10/graphlib-dot.min.js"></script>
-    <script src="http://cpettitt.github.io/project/dagre-d3/v0.1.5/dagre-d3.min.js"></script>
+<meta charset="utf-8">
+<title>Draw dot from an external file</title>
 
-    <script>
-        function drawDot(dot) {
-            // Parse the DOT syntax into a graphlib object.
-            var g = graphlibDot.parse(dot);
+<script src="http://d3js.org/d3.v3.js"></script>
+<script src="http://cpettitt.github.io/project/graphlib-dot/v0.5.2/graphlib-dot.js"></script>
+<script src="http://cpettitt.github.io/project/dagre-d3/latest/dagre-d3.js"></script>
 
-            // Render the graphlib object using d3.
-            var renderer = new dagreD3.Renderer();
-            renderer.run(g, d3.select("svg g"));
+<style>
+    svg {
+        border: 1px solid #999;
+        overflow: hidden;
+    }
 
+    .node {
+        white-space: nowrap;
+    }
 
-            // Optional - resize the SVG element based on the contents.
-            var svg = document.querySelector('#graphContainer');
-            var bbox = svg.getBBox();
-            svg.style.width = bbox.width + 40.0 + "px";
-            svg.style.height = bbox.height + 40.0 + "px";
-        }
+    .node rect,
+    .node circle,
+    .node ellipse {
+        stroke: #333;
+        fill: #fff;
+        stroke-width: 1.5px;
+    }
 
-        window.onload = function() {
-            d3.text("grid.dot", "text/plain", function(error, data) {
-                drawDot(data)
-            });
-        }
-    </script>
-    <style>
-        svg {
-            overflow: hidden;
-        }
+    .cluster rect {
+        stroke: #333;
+        fill: #000;
+        fill-opacity: 0.1;
+        stroke-width: 1.5px;
+    }
 
-        .node rect {
-            stroke: #333;
-            stroke-width: 1.5px;
-            fill: #fff;
-        }
+    .edgePath path.path {
+        stroke: #333;
+        stroke-width: 1.5px;
+        fill: none;
+    }
+</style>
 
-        .edgeLabel rect {
-            fill: #fff;
-        }
+<body onLoad="loadDot();">
 
-        .edgePath {
-            stroke: #333;
-            stroke-width: 1.5px;
-            fill: none;
-        }
-    </style>
-</head>
-<body>
-<svg id="graphContainer">
+<svg width=800 height=600>
     <g/>
 </svg>
-</body>
-</html>
+
+<script>
+    // Set up zoom support
+    var svg = d3.select("svg"),
+            inner = d3.select("svg g"),
+            zoom = d3.behavior.zoom().on("zoom", function () {
+                inner.attr("transform", "translate(" + d3.event.translate + ")" +
+                        "scale(" + d3.event.scale + ")");
+            });
+    svg.call(zoom);
+
+    // Create and configure the renderer
+    var render = dagreD3.render();
+
+    function drawDot(dot) {
+        var g;
+        try {
+            g = graphlibDot.read(dot);
+        } catch (e) {
+            inputGraph.setAttribute("class", "error");
+            throw e;
+        }
+
+        // Set margins, if not present
+        if (!g.graph().hasOwnProperty("marginx") && !g.graph().hasOwnProperty("marginy")) {
+            g.graph().marginx = 20;
+            g.graph().marginy = 20;
+        }
+
+        g.graph().transition = function (selection) {
+            return selection.transition().duration(500);
+        };
+
+        // Render the graph into svg g
+        d3.select("svg g").call(render, g);
+    }
+    function loadDot() {
+        d3.text("grid.dot", "text/plain", function (error, data) {
+            drawDot(data)
+        });
+    }
+</script>
