--- a/cpd.html
+++ b/cpd.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>CS410J Phone Bill Project - Reactor Dependency Convergence</title>
+    <title>CS410J Phone Bill Project - CPD Results</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -50,44 +50,35 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                <li class="expanded">
+                                                                                                                                                                                                                                      <li class="collapsed">
                           <a href="project-info.html" title="Project Information">Project Information</a>
+                  </li>
+                                                                                                                                                                                          <li class="expanded">
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
                     <ul>
                       <li class="none">
-                          <a href="dependencies.html" title="Dependencies">Dependencies</a>
+                          <a href="surefire-report.html" title="Surefire Report">Surefire Report</a>
             </li>
                       <li class="none">
-            <strong>Dependency Convergence</strong>
+                          <a href="xref/index.html" title="Source Xref">Source Xref</a>
+            </li>
+                      <li class="none">
+                          <a href="xref-test/index.html" title="Test Source Xref">Test Source Xref</a>
+            </li>
+                      <li class="none">
+                          <a href="jdepend-report.html" title="JDepend">JDepend</a>
+            </li>
+                      <li class="none">
+                          <a href="checkstyle.html" title="Checkstyle">Checkstyle</a>
+            </li>
+                      <li class="none">
+                          <a href="pmd.html" title="PMD Report">PMD Report</a>
+            </li>
+                      <li class="none">
+            <strong>CPD Report</strong>
           </li>
-                      <li class="none">
-                          <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
-            </li>
-                      <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
-                      <li class="none">
-                          <a href="index.html" title="About">About</a>
-            </li>
-                      <li class="none">
-                          <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
-            </li>
-                      <li class="none">
-                          <a href="plugins.html" title="Project Plugins">Project Plugins</a>
-            </li>
-                      <li class="none">
-                          <a href="team-list.html" title="Project Team">Project Team</a>
-            </li>
-                      <li class="none">
-                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
-            </li>
-                      <li class="none">
-                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
-            </li>
               </ul>
         </li>
-                                                                                                                                                                                <li class="collapsed">
-                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
-                  </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
@@ -99,39 +90,11 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>Reactor Dependency Convergence<a name="Reactor_Dependency_Convergence"></a></h2>
-<table border="0" class="bodyTable"><caption>
-  <b>Legend:</b>
-</caption>
-<tr class="a">
-<td><img alt="error" src="images/icon_error_sml.gif" /></td>
-<td>At least one dependency has a differing version of the dependency or has SNAPSHOT dependencies.</td></tr></table><br />
-<table border="0" class="bodyTable"><caption>
-  <b>Statistics:</b>
-</caption>
-<tr class="b">
-<th>Number of modules:</th>
-<td>8</td></tr>
-<tr class="a">
-<th>Number of dependencies (NOD):</th>
-<td>24</td></tr>
-<tr class="b">
-<th>Number of unique artifacts (NOA):</th>
-<td>24</td></tr>
-<tr class="a">
-<th>Number of version-conflicting artifacts (NOC):</th>
-<td>0</td></tr>
-<tr class="b">
-<th>Number of SNAPSHOT artifacts (NOS):</th>
-<td>0</td></tr>
-<tr class="a">
-<th>Convergence (NOD/NOA):</th>
-<td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>100 %</b></td></tr>
-<tr class="b">
-<th>Ready for release (100 % convergence and no SNAPSHOTS):</th>
-<td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>Success</b></td></tr></table></div>
+<h2>CPD Results<a name="CPD_Results"></a></h2>
+<p>The following document contains the results of PMD's  <a class="externalLink" href="http://pmd.sourceforge.net/cpd.html">CPD</a> 4.3.</p></div>
 <div class="section">
-<h3>Dependencies used in modules<a name="Dependencies_used_in_modules"></a></h3></div>
+<h2>Duplications<a name="Duplications"></a></h2>
+<p>CPD found no problems in your source code.</p></div>
       </div>
     </div>
     <div class="clear">
