--- a/xref-test/overview-frame.html
+++ b/xref-test/overview-frame.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>PortlandStateJavaSummer2015 Summer2015 Reference</title>
+		<title>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -17,12 +17,6 @@
 		<ul>
 						<li>
 				<a href="edu/pdx/cs410J/kata/package-frame.html" target="packageFrame">edu.pdx.cs410J.kata</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/minesweeper/package-frame.html" target="packageFrame">edu.pdx.cs410J.minesweeper</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/whitlock/package-frame.html" target="packageFrame">edu.pdx.cs410J.whitlock</a>
 			</li>
 					</ul>
 
