--- a/xref/overview-frame.html
+++ b/xref/overview-frame.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>PortlandStateJavaSummer2015 Summer2015 Reference</title>
+		<title>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,40 +16,7 @@
 
 		<ul>
 						<li>
-				<a href="advanced/package-frame.html" target="packageFrame">advanced</a>
-			</li>
-						<li>
-				<a href="beginner/package-frame.html" target="packageFrame">beginner</a>
-			</li>
-						<li>
 				<a href="edu/pdx/cs410J/kata/package-frame.html" target="packageFrame">edu.pdx.cs410J.kata</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/minesweeper/package-frame.html" target="packageFrame">edu.pdx.cs410J.minesweeper</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/minesweeper/client/package-frame.html" target="packageFrame">edu.pdx.cs410J.minesweeper.client</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/minesweeper/server/package-frame.html" target="packageFrame">edu.pdx.cs410J.minesweeper.server</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/whitlock/package-frame.html" target="packageFrame">edu.pdx.cs410J.whitlock</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/whitlock/client/package-frame.html" target="packageFrame">edu.pdx.cs410J.whitlock.client</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/whitlock/server/package-frame.html" target="packageFrame">edu.pdx.cs410J.whitlock.server</a>
-			</li>
-						<li>
-				<a href="intermediate/package-frame.html" target="packageFrame">intermediate</a>
-			</li>
-						<li>
-				<a href="java7/package-frame.html" target="packageFrame">java7</a>
-			</li>
-						<li>
-				<a href="java8/package-frame.html" target="packageFrame">java8</a>
 			</li>
 					</ul>
 
