--- a/xref/overview-summary.html
+++ b/xref/overview-summary.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>PortlandStateJavaSummer2015 Summer2015 Reference</title>
+		<title>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -24,7 +24,7 @@
 	        </ul>
       	</div>
 		
-		      	<h2>PortlandStateJavaSummer2015 Summer2015 Reference</h2>
+		      	<h2>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</h2>
 
 		<table class="summary">
         	<thead>
@@ -35,62 +35,7 @@
         	<tbody>
     	    	            	<tr>
               		<td>
-                		<a href="advanced/package-summary.html">advanced</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="beginner/package-summary.html">beginner</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
                 		<a href="edu/pdx/cs410J/kata/package-summary.html">edu.pdx.cs410J.kata</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="edu/pdx/cs410J/minesweeper/package-summary.html">edu.pdx.cs410J.minesweeper</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="edu/pdx/cs410J/minesweeper/client/package-summary.html">edu.pdx.cs410J.minesweeper.client</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="edu/pdx/cs410J/minesweeper/server/package-summary.html">edu.pdx.cs410J.minesweeper.server</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="edu/pdx/cs410J/whitlock/package-summary.html">edu.pdx.cs410J.whitlock</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="edu/pdx/cs410J/whitlock/client/package-summary.html">edu.pdx.cs410J.whitlock.client</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="edu/pdx/cs410J/whitlock/server/package-summary.html">edu.pdx.cs410J.whitlock.server</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="intermediate/package-summary.html">intermediate</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="java7/package-summary.html">java7</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
-                		<a href="java8/package-summary.html">java8</a>
               		</td>
             	</tr>
 	          	        	</tbody>
@@ -114,8 +59,6 @@
       	</div>
 		
 		<hr />
-		<div id="footer">
-			Copyright &#169; 2015&#x2013;2016 <a href="http://www.pdx.edu">Portland State University</a>. All rights reserved.
-		</div>
+		Copyright &#169; 2000-2016 Portland State University. All Rights Reserved.
 	</body>
 </html>
