wagon-git commit

--- a/dependency-info.html
+++ b/dependency-info.html
@@ -104,38 +104,38 @@
 <h3>Apache Maven<a name="Apache_Maven"></a></h3><a name="Apache_Maven"></a>
 <div class="source">
 <pre>&lt;dependency&gt;
-  &lt;groupId&gt;edu.pdx.cs410J.kata&lt;/groupId&gt;
-  &lt;artifactId&gt;KataNumbersInWords&lt;/artifactId&gt;
+  &lt;groupId&gt;edu.pdx.cs410J.minesweeper&lt;/groupId&gt;
+  &lt;artifactId&gt;minesweeper-kata&lt;/artifactId&gt;
   &lt;version&gt;1.0-SNAPSHOT&lt;/version&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Apache Buildr<a name="Apache_Buildr"></a></h3><a name="Apache_Buildr"></a>
 <div class="source">
-<pre>'edu.pdx.cs410J.kata:KataNumbersInWords:jar:1.0-SNAPSHOT'</pre></div></div>
+<pre>'edu.pdx.cs410J.minesweeper:minesweeper-kata:jar:1.0-SNAPSHOT'</pre></div></div>
 <div class="section">
 <h3>Apache Ivy<a name="Apache_Ivy"></a></h3><a name="Apache_Ivy"></a>
 <div class="source">
-<pre>&lt;dependency org=&quot;edu.pdx.cs410J.kata&quot; name=&quot;KataNumbersInWords&quot; rev=&quot;1.0-SNAPSHOT&quot;&gt;
-  &lt;artifact name=&quot;KataNumbersInWords&quot; type=&quot;jar&quot; /&gt;
+<pre>&lt;dependency org=&quot;edu.pdx.cs410J.minesweeper&quot; name=&quot;minesweeper-kata&quot; rev=&quot;1.0-SNAPSHOT&quot;&gt;
+  &lt;artifact name=&quot;minesweeper-kata&quot; type=&quot;jar&quot; /&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Groovy Grape<a name="Groovy_Grape"></a></h3><a name="Groovy_Grape"></a>
 <div class="source">
 <pre>@Grapes(
-@Grab(group='edu.pdx.cs410J.kata', module='KataNumbersInWords', version='1.0-SNAPSHOT')
+@Grab(group='edu.pdx.cs410J.minesweeper', module='minesweeper-kata', version='1.0-SNAPSHOT')
 )</pre></div></div>
 <div class="section">
 <h3>Grails<a name="Grails"></a></h3><a name="Grails"></a>
 <div class="source">
-<pre>compile 'edu.pdx.cs410J.kata:KataNumbersInWords:1.0-SNAPSHOT'</pre></div></div>
+<pre>compile 'edu.pdx.cs410J.minesweeper:minesweeper-kata:1.0-SNAPSHOT'</pre></div></div>
 <div class="section">
 <h3>Leiningen<a name="Leiningen"></a></h3><a name="Leiningen"></a>
 <div class="source">
-<pre>[edu.pdx.cs410J.kata/KataNumbersInWords &quot;1.0-SNAPSHOT&quot;]</pre></div></div>
+<pre>[edu.pdx.cs410J.minesweeper/minesweeper-kata &quot;1.0-SNAPSHOT&quot;]</pre></div></div>
 <div class="section">
 <h3>SBT<a name="SBT"></a></h3><a name="SBT"></a>
 <div class="source">
-<pre>libraryDependencies += &quot;edu.pdx.cs410J.kata&quot; % &quot;KataNumbersInWords&quot; % &quot;1.0-SNAPSHOT&quot;</pre></div></div></div>
+<pre>libraryDependencies += &quot;edu.pdx.cs410J.minesweeper&quot; % &quot;minesweeper-kata&quot; % &quot;1.0-SNAPSHOT&quot;</pre></div></div></div>
       </div>
     </div>
     <div class="clear">
