--- a/jdepend-report.html
+++ b/jdepend-report.html
@@ -105,18 +105,18 @@
 <th>D</th>
 <th>V</th></tr>
 <tr class="b">
-<td><a href="#edu.pdx.cs410J.kata">edu.pdx.cs410J.kata</a></td>
-<td>1</td>
+<td><a href="#edu.pdx.cs410J.minesweeper">edu.pdx.cs410J.minesweeper</a></td>
+<td>9</td>
+<td>8</td>
 <td>1</td>
 <td>0</td>
-<td>0</td>
-<td>3</td>
-<td>0.0%</td>
+<td>2</td>
+<td>11.0%</td>
 <td>100.0%</td>
-<td>0.0%</td>
+<td>11.0%</td>
 <td>1</td></tr></table><a name="packages"></a>
-<h2>Packages<a name="Packages"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><a name="edu.pdx.cs410J.kata"></a>
-<h3>edu.pdx.cs410J.kata<a name="edu.pdx.cs410J.kata"></a></h3>
+<h2>Packages<a name="Packages"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><a name="edu.pdx.cs410J.minesweeper"></a>
+<h3>edu.pdx.cs410J.minesweeper<a name="edu.pdx.cs410J.minesweeper"></a></h3>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Afferent Couplings</th>
@@ -126,10 +126,10 @@
 <th>Distance</th></tr>
 <tr class="b">
 <td>0</td>
-<td>3</td>
-<td>0.0%</td>
+<td>2</td>
+<td>11.0%</td>
 <td>100.0%</td>
-<td>0.0%</td></tr></table>
+<td>11.0%</td></tr></table>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Abstract Classes</th>
@@ -137,10 +137,10 @@
 <th>Used by Packages</th>
 <th>Uses Packages</th></tr>
 <tr class="b">
+<td>edu.pdx.cs410J.minesweeper.MinesweeperGame$MineGameGenerator<br /></td>
+<td>edu.pdx.cs410J.minesweeper.GameState<br />edu.pdx.cs410J.minesweeper.GameState$GameResult<br />edu.pdx.cs410J.minesweeper.MineField<br />edu.pdx.cs410J.minesweeper.MineFieldWithHints<br />edu.pdx.cs410J.minesweeper.MinesweeperGame<br />edu.pdx.cs410J.minesweeper.MinesweeperGameMainProgram$InvalidRowAndColumnException<br />edu.pdx.cs410J.minesweeper.MinesweeperGameMainProgram$RowAndColumn<br />edu.pdx.cs410J.minesweeper.RandomMinesweeperGameGenerator<br /></td>
 <td><i>None</i></td>
-<td>edu.pdx.cs410J.kata.NumbersInWords<br /></td>
-<td><i>None</i></td>
-<td>edu.pdx.cs410J<br />java.io<br />java.lang<br /></td></tr></table><a name="cycles"></a>
+<td>java.lang<br />java.util<br /></td></tr></table><a name="cycles"></a>
 <h2>Cycles<a name="Cycles"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><br />There are no cyclic dependencies.<br /><a name="explanations"></a>
 <h2>Explanation<a name="Explanation"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><br />The following explanations are for quick reference and are lifted directly from the original JDepend documentation.<br /><br />
 <table border="0" class="bodyTable">
