--- a/pmd.html
+++ b/pmd.html
@@ -95,20 +95,95 @@
 <div class="section">
 <h2>Files<a name="Files"></a></h2>
 <div class="section">
-<h3>edu/pdx/cs410J/kata/NumbersInWords.java<a name="edupdxcs410JkataNumbersInWords.java"></a></h3>
+<h3>edu/pdx/cs410J/minesweeper/GameState.java<a name="edupdxcs410JminesweeperGameState.java"></a></h3>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Violation</th>
 <th>Line</th></tr>
 <tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/KataNumbersInWords/src/main/java/edu/pdx/cs410J/kata/NumbersInWords.java: Can't use JDK 1.5 for loop syntax when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/kata/NumbersInWords.html#0">0</a></td></tr>
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/GameState.java: Can't use static imports when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/GameState.html#0">0</a></td></tr>
 <tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/KataNumbersInWords/src/main/java/edu/pdx/cs410J/kata/NumbersInWords.java: Can't use JDK 1.5 for loop syntax when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/kata/NumbersInWords.html#0">0</a></td></tr>
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/GameState.java: Can't use static imports when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/GameState.html#0">0</a></td></tr>
 <tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/KataNumbersInWords/src/main/java/edu/pdx/cs410J/kata/NumbersInWords.java: Can't use JDK 1.5 for loop syntax when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/kata/NumbersInWords.html#0">0</a></td></tr></table></div></div>
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/GameState.java: Can't use static imports when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/GameState.html#0">0</a></td></tr></table></div>
+<div class="section">
+<h3>edu/pdx/cs410J/minesweeper/MineField.java<a name="edupdxcs410JminesweeperMineField.java"></a></h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Violation</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineField.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineField.html#0">0</a></td></tr>
+<tr class="a">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineField.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineField.html#0">0</a></td></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineField.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineField.html#0">0</a></td></tr></table></div>
+<div class="section">
+<h3>edu/pdx/cs410J/minesweeper/MineFieldWithHints.java<a name="edupdxcs410JminesweeperMineFieldWithHints.java"></a></h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Violation</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineFieldWithHints.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineFieldWithHints.html#0">0</a></td></tr>
+<tr class="a">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineFieldWithHints.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineFieldWithHints.html#0">0</a></td></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineFieldWithHints.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineFieldWithHints.html#0">0</a></td></tr></table></div>
+<div class="section">
+<h3>edu/pdx/cs410J/minesweeper/MinesweeperGame.java<a name="edupdxcs410JminesweeperMinesweeperGame.java"></a></h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Violation</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGame.java: Can't use static imports when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGame.html#0">0</a></td></tr>
+<tr class="a">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGame.java: Can't use static imports when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGame.html#0">0</a></td></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGame.java: Can't use static imports when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGame.html#0">0</a></td></tr></table></div>
+<div class="section">
+<h3>edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java<a name="edupdxcs410JminesweeperMinesweeperGameMainProgram.java"></a></h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Violation</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html#0">0</a></td></tr>
+<tr class="a">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html#0">0</a></td></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java: Can't use generics unless running in JDK 1.5 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html#0">0</a></td></tr></table></div>
+<div class="section">
+<h3>edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java<a name="edupdxcs410JminesweeperRandomMinesweeperGameGenerator.java"></a></h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Violation</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java: Can't use annotations when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html#0">0</a></td></tr>
+<tr class="a">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java: Can't use annotations when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html#0">0</a></td></tr>
+<tr class="b">
+<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java: Can't use annotations when running in JDK 1.4 mode!</td>
+<td><a href="./xref/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html#0">0</a></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
