--- a/project-summary.html
+++ b/project-summary.html
@@ -135,10 +135,10 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>GroupId</td>
-<td>edu.pdx.cs410J.kata</td></tr>
+<td>edu.pdx.cs410J.minesweeper</td></tr>
 <tr class="a">
 <td>ArtifactId</td>
-<td>KataNumbersInWords</td></tr>
+<td>minesweeper-kata</td></tr>
 <tr class="b">
 <td>Version</td>
 <td>1.0-SNAPSHOT</td></tr>
