--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -12,7 +12,10 @@
 
 		<ul>
 						<li>
-				<a href="edu/pdx/cs410J/kata/NumbersInWordsTest.html" target="classFrame">NumbersInWordsTest</a>
+				<a href="edu/pdx/cs410J/minesweeper/MineFieldTest.html" target="classFrame">MineFieldTest</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGameTest.html" target="classFrame">MinesweeperGameTest</a>
 			</li>
 			      </ul>
 
