--- a/dependencies.html
+++ b/dependencies.html
@@ -112,6 +112,12 @@
 <th>Type</th>
 <th>License</th></tr>
 <tr class="b">
+<td>com.google.guava</td>
+<td><a class="externalLink" href="http://code.google.com/p/guava-libraries/guava">guava</a></td>
+<td>16.0.1</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></td></tr>
+<tr class="a">
 <td>edu.pdx.cs410J</td>
 <td><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">projects</a></td>
 <td>Summer2015</td>
@@ -183,7 +189,7 @@
 <div class="section">
 <h3>Dependency Tree<a name="Dependency_Tree"></a></h3>
 <ul>
-<li>edu.pdx.cs410J.kata:KataNumbersInWords:jar:1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep0', '_img1' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep0" style="display:none">
+<li>edu.pdx.cs410J.minesweeper:minesweeper-kata:jar:1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep0', '_img1' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>CS410J Phone Bill Project</th></tr>
@@ -221,7 +227,21 @@
 <p><b>Description: </b>Classes needed for the Projects in CS410J: Advanced Java Programming</p>
 <p><b>URL: </b><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">http://www.cs.pdx.edu/~whitlock</a></p>
 <p><b>Project License: </b>No license is defined for this project.</p></td></tr></table></div></li>
-<li>edu.pdx.cs410J:projects:jar:tests:Summer2015 (test) <img id="_img9" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep8', '_img9' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep8" style="display:none">
+<li>com.google.guava:guava:jar:16.0.1 (compile) <img id="_img9" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep8', '_img9' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep8" style="display:none">
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Guava: Google Core Libraries for Java</th></tr>
+<tr class="b">
+<td>
+<p><b>Description: </b>Guava is a suite of core and expanded libraries that include
+    utility classes, google's collections, io classes, and much
+    much more.
+
+    Guava has only one code dependency - javax.annotation,
+    per the JSR-305 spec.</p>
+<p><b>URL: </b><a class="externalLink" href="http://code.google.com/p/guava-libraries/guava">http://code.google.com/p/guava-libraries/guava</a></p>
+<p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
+<li>edu.pdx.cs410J:projects:jar:tests:Summer2015 (test) <img id="_img11" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep10', '_img11' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep10" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>CS410J Project APIs</th></tr>
@@ -234,7 +254,8 @@
 <h2>Licenses<a name="Licenses"></a></h2>
 <p><b>Unknown: </b>CS410J Phone Bill Project, CS410J Project APIs</p>
 <p><b>Eclipse Public License 1.0: </b>JUnit</p>
-<p><b>New BSD License: </b>Hamcrest Core</p></div><a name="Dependency_File_Details"></a>
+<p><b>New BSD License: </b>Hamcrest Core</p>
+<p><b>The Apache Software License, Version 2.0: </b>Guava: Google Core Libraries for Java</p></div><a name="Dependency_File_Details"></a>
 <div class="section">
 <h2>Dependency File Details<a name="Dependency_File_Details"></a></h2>
 <table border="0" class="bodyTable">
@@ -247,6 +268,14 @@
 <th>Java Version</th>
 <th title="Indicates whether these dependencies have been compiled with debug information.">Debug Information</th></tr>
 <tr class="b">
+<td>guava-16.0.1.jar</td>
+<td>2.23 MB</td>
+<td>1709</td>
+<td>1678</td>
+<td>17</td>
+<td>1.6</td>
+<td>Yes</td></tr>
+<tr class="a">
 <td>projects-Summer2015.jar</td>
 <td>19.11 kB</td>
 <td>26</td>
@@ -254,7 +283,7 @@
 <td>1</td>
 <td>1.6</td>
 <td>Yes</td></tr>
-<tr class="a">
+<tr class="b">
 <td>projects-Summer2015-tests.jar</td>
 <td>14.31 kB</td>
 <td>23</td>
@@ -262,7 +291,7 @@
 <td>1</td>
 <td>1.6</td>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <td>junit-4.12.jar</td>
 <td>314.93 kB</td>
 <td>323</td>
@@ -270,7 +299,7 @@
 <td>30</td>
 <td>1.5</td>
 <td>Yes</td></tr>
-<tr class="a">
+<tr class="b">
 <td>hamcrest-core-1.3.jar</td>
 <td>45.02 kB</td>
 <td>52</td>
@@ -278,7 +307,7 @@
 <td>3</td>
 <td>1.5</td>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th>Total</th>
 <th>Size</th>
 <th>Entries</th>
@@ -286,23 +315,23 @@
 <th>Packages</th>
 <th>Java Version</th>
 <th>Debug Information</th></tr>
-<tr class="a">
-<td>4</td>
-<td>393.38 kB</td>
-<td>424</td>
-<td>359</td>
-<td>35</td>
-<td>1.6</td>
-<td>4</td></tr>
 <tr class="b">
-<td>compile: 1</td>
-<td>compile: 19.11 kB</td>
-<td>compile: 26</td>
-<td>compile: 15</td>
-<td>compile: 1</td>
-<td>-</td>
-<td>compile: 1</td></tr>
+<td>5</td>
+<td>2.62 MB</td>
+<td>2133</td>
+<td>2037</td>
+<td>52</td>
+<td>1.6</td>
+<td>5</td></tr>
 <tr class="a">
+<td>compile: 2</td>
+<td>compile: 2.25 MB</td>
+<td>compile: 1735</td>
+<td>compile: 1693</td>
+<td>compile: 18</td>
+<td>-</td>
+<td>compile: 2</td></tr>
+<tr class="b">
 <td>test: 3</td>
 <td>test: 374.27 kB</td>
 <td>test: 398</td>
@@ -329,6 +358,11 @@
 <td>Yes</td>
 <td>Yes</td></tr>
 <tr class="b">
+<td>sonatype-nexus-snapshots</td>
+<td><a class="externalLink" href="https://oss.sonatype.org/content/repositories/snapshots">https://oss.sonatype.org/content/repositories/snapshots</a></td>
+<td>No</td>
+<td>Yes</td></tr>
+<tr class="a">
 <td>Codehaus Snapshots</td>
 <td><a class="externalLink" href="http://snapshots.maven.codehaus.org">http://snapshots.maven.codehaus.org</a></td>
 <td>No</td>
@@ -339,36 +373,49 @@
 <th>Artifact</th>
 <th>central</th>
 <th>CS410J</th>
+<th>sonatype-nexus-snapshots</th>
 <th>Codehaus Snapshots</th></tr>
 <tr class="b">
+<td>com.google.guava:guava:jar:16.0.1</td>
+<td><a class="externalLink" href="https://repo.maven.apache.org/maven2/com/google/guava/guava/16.0.1/guava-16.0.1.jar"><img alt="Found at https://repo.maven.apache.org/maven2" src="images/icon_success_sml.gif" /></a></td>
+<td>-</td>
+<td>-</td>
+<td>-</td></tr>
+<tr class="a">
 <td>edu.pdx.cs410J:projects:jar:Summer2015</td>
 <td>-</td>
 <td><a class="externalLink" href="http://web.cecs.pdx.edu/~whitlock/repository/maven2/edu/pdx/cs410J/projects/Summer2015/projects-Summer2015.jar"><img alt="Found at http://web.cecs.pdx.edu/~whitlock/repository/maven2" src="images/icon_success_sml.gif" /></a></td>
+<td>-</td>
 <td>-</td></tr>
-<tr class="a">
+<tr class="b">
 <td>edu.pdx.cs410J:projects:jar:tests:Summer2015</td>
 <td>-</td>
 <td><a class="externalLink" href="http://web.cecs.pdx.edu/~whitlock/repository/maven2/edu/pdx/cs410J/projects/Summer2015/projects-Summer2015-tests.jar"><img alt="Found at http://web.cecs.pdx.edu/~whitlock/repository/maven2" src="images/icon_success_sml.gif" /></a></td>
+<td>-</td>
 <td>-</td></tr>
-<tr class="b">
+<tr class="a">
 <td>junit:junit:jar:4.12</td>
 <td><a class="externalLink" href="https://repo.maven.apache.org/maven2/junit/junit/4.12/junit-4.12.jar"><img alt="Found at https://repo.maven.apache.org/maven2" src="images/icon_success_sml.gif" /></a></td>
 <td>-</td>
-<td>-</td></tr>
-<tr class="a">
-<td>org.hamcrest:hamcrest-core:jar:1.3</td>
-<td><a class="externalLink" href="https://repo.maven.apache.org/maven2/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"><img alt="Found at https://repo.maven.apache.org/maven2" src="images/icon_success_sml.gif" /></a></td>
 <td>-</td>
 <td>-</td></tr>
 <tr class="b">
+<td>org.hamcrest:hamcrest-core:jar:1.3</td>
+<td><a class="externalLink" href="https://repo.maven.apache.org/maven2/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"><img alt="Found at https://repo.maven.apache.org/maven2" src="images/icon_success_sml.gif" /></a></td>
+<td>-</td>
+<td>-</td>
+<td>-</td></tr>
+<tr class="a">
 <th>Total</th>
 <th>central</th>
 <th>CS410J</th>
+<th>sonatype-nexus-snapshots</th>
 <th>Codehaus Snapshots</th></tr>
-<tr class="a">
-<td>4 (compile: 1, test: 3)</td>
+<tr class="b">
+<td>5 (compile: 2, test: 3)</td>
+<td>3</td>
 <td>2</td>
-<td>2</td>
+<td>0</td>
 <td>0</td></tr></table></div>
       </div>
     </div>
