--- a/surefire-report.html
+++ b/surefire-report.html
@@ -103,12 +103,12 @@
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td>6</td>
+<td>31</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.026</td></tr></table><br />
+<td>0.064</td></tr></table><br />
 <p>Note: failures are anticipated and checked for with assertions while errors are unanticipated.</p><br /></div>
 <div class="section">
 <h2>Package List<a name="Package_List"></a></h2><a name="Package_List"></a>
@@ -123,16 +123,16 @@
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td><a href="#edu.pdx.cs410J.kata">edu.pdx.cs410J.kata</a></td>
-<td>6</td>
+<td><a href="#edu.pdx.cs410J.minesweeper">edu.pdx.cs410J.minesweeper</a></td>
+<td>31</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.026</td></tr></table><br />
+<td>0.064</td></tr></table><br />
 <p>Note: package statistics are not computed recursively, they only sum up all of its testsuites numbers.</p>
 <div class="section">
-<h3>edu.pdx.cs410J.kata<a name="edu.pdx.cs410J.kata"></a></h3><a name="edu.pdx.cs410J.kata"></a>
+<h3>edu.pdx.cs410J.minesweeper<a name="edu.pdx.cs410J.minesweeper"></a></h3><a name="edu.pdx.cs410J.minesweeper"></a>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th></th>
@@ -144,44 +144,156 @@
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td><a href="#edu.pdx.cs410J.kataNumbersInWordsTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
-<td><a href="#edu.pdx.cs410J.kataNumbersInWordsTest">NumbersInWordsTest</a></td>
-<td>6</td>
+<td><a href="#edu.pdx.cs410J.minesweeperMineFieldTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
+<td><a href="#edu.pdx.cs410J.minesweeperMineFieldTest">MineFieldTest</a></td>
+<td>23</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.026</td></tr></table></div><br /></div>
+<td>0.016</td></tr>
+<tr class="a">
+<td><a href="#edu.pdx.cs410J.minesweeperMinesweeperGameTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
+<td><a href="#edu.pdx.cs410J.minesweeperMinesweeperGameTest">MinesweeperGameTest</a></td>
+<td>8</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100%</td>
+<td>0.048</td></tr></table></div><br /></div>
 <div class="section">
 <h2>Test Cases<a name="Test_Cases"></a></h2><a name="Test_Cases"></a>
 <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p>
 <div class="section">
-<h3>NumbersInWordsTest<a name="NumbersInWordsTest"></a></h3><a name="edu.pdx.cs410J.kataNumbersInWordsTest"></a>
+<h3>MineFieldTest<a name="MineFieldTest"></a></h3><a name="edu.pdx.cs410J.minesweeperMineFieldTest"></a>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>spaceSurroundedByMines</td>
+<td>0.004</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>mineToLeftAboveAndNorthWestOfSpace</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>oneMineOneSpaceInOneRow</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>twoMinesInOneRow</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>mineToRightBelowAndSouthEastOfSpace</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>oneByOneMineFieldWithOneMineHasOneMine</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>mineToLeftBelowAndSouthWestOfSpace</td>
+<td>0.001</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>oneMineOneSpaceInOneRowMineToTheRightOfSpace</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>nonZeroByZeroThrowsIllegalArgumentException</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>zeroByZeroMineFieldThrowsIllegalArgumentException</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>oneMineOneSpaceInOneColumnMineAboveSpace</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>moreThan100ColumnsThrowsIllegalArgumentException</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>oneByOneMineFieldWithNoMinesHasZeroMines</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>convertListOfStringIntoCharMatrix</td>
+<td>0.01</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>moreThan100RowsThrowsIllegalArgumentException</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>oneMineOneSpaceInOneColumnMineBelowSpace</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>noMinesInOneRow</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>twoMinesAboveAndBelowASpace</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>twoMinesOnEitherSideOfASpace</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>nonZeroByNonZeroIsOkay</td>
+<td>0.001</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>mineToRightAndBelowSpace</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>zeroByNonZeroThrowsIllegalArgumentException</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>mineToRightAboveAndNorthEastOfSpace</td>
+<td>0</td></tr></table></div>
+<div class="section">
+<h3>MinesweeperGameTest<a name="MinesweeperGameTest"></a></h3><a name="edu.pdx.cs410J.minesweeperMinesweeperGameTest"></a>
 <table border="0" class="bodyTable">
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>testConvert1ToOne</td>
-<td>0.004</td></tr>
+<td>probeEmptyFieldRevealsAllAndWinsGame</td>
+<td>0.048</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>testNoCommandLineArguments</td>
-<td>0.018</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>testMinValue</td>
-<td>0.003</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>StringArguments</td>
+<td>probe3x3GridWithMineInTopLeftRevealsALot</td>
 <td>0</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>testValidDouble</td>
+<td>probeEmpty1x1GridWinsGame</td>
 <td>0</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>testInvalidMinValue</td>
-<td>0.001</td></tr></table></div><br /></div>
+<td>probe2x2GridWithMinesInCornersReveals2AndGameIsStillInProgress</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>probe1x1GridWithBombLosesGame</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>losingGameRevealsAllCells</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>probeSurroundedSpaceReveals8AndOtherCellsAreMines</td>
+<td>0</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>whenOnlyUnprobedMinesRemainGameIsWon</td>
+<td>0</td></tr></table></div><br /></div>
       </div>
     </div>
     <div class="clear">
