--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -12,7 +12,34 @@
 
 		<ul>
 						<li>
-				<a href="edu/pdx/cs410J/kata/NumbersInWords.html" target="classFrame">NumbersInWords</a>
+				<a href="edu/pdx/cs410J/minesweeper/GameState.html" target="classFrame">GameResult</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/GameState.html" target="classFrame">GameState</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html" target="classFrame">InvalidRowAndColumnException</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MineField.html" target="classFrame">MineField</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MineFieldWithHints.html" target="classFrame">MineFieldWithHints</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGame.html" target="classFrame">MineGameGenerator</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGame.html" target="classFrame">MinesweeperGame</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html" target="classFrame">MinesweeperGameMainProgram</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html" target="classFrame">RandomMinesweeperGameGenerator</a>
+			</li>
+						<li>
+				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html" target="classFrame">RowAndColumn</a>
 			</li>
 			      </ul>
 
