--- a/xref/overview-frame.html
+++ b/xref/overview-frame.html
@@ -16,7 +16,7 @@
 
 		<ul>
 						<li>
-				<a href="edu/pdx/cs410J/kata/package-frame.html" target="packageFrame">edu.pdx.cs410J.kata</a>
+				<a href="edu/pdx/cs410J/minesweeper/package-frame.html" target="packageFrame">edu.pdx.cs410J.minesweeper</a>
 			</li>
 					</ul>
 
