--- a/xref/overview-summary.html
+++ b/xref/overview-summary.html
@@ -35,7 +35,7 @@
         	<tbody>
     	    	            	<tr>
               		<td>
-                		<a href="edu/pdx/cs410J/kata/package-summary.html">edu.pdx.cs410J.kata</a>
+                		<a href="edu/pdx/cs410J/minesweeper/package-summary.html">edu.pdx.cs410J.minesweeper</a>
               		</td>
             	</tr>
 	          	        	</tbody>
