wagon-git commit

--- a/dependencies.html
+++ b/dependencies.html
@@ -270,14 +270,14 @@
 <div class="section">
 <h3>Dependency Tree<a name="Dependency_Tree"></a></h3>
 <ul>
-<li>edu.pdx.cs410J.minesweeper:minesweeper-gwt:war:Summer2015 <img id="_img1" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep0', '_img1' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep0" style="display:none">
+<li>edu.pdx.cs410J.whitlock:phonebill-gwt:war:Summer2015 <img id="_img1" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep0', '_img1' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Phone Bill GWT Application</th></tr>
 <tr class="b">
 <td>
 <p><b>Description: </b>Example Java Code for CS410J: Advanced Java Programming at Portland State University</p>
-<p><b>URL: </b><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock/gwt-parent/minesweeper-gwt">http://www.cs.pdx.edu/~whitlock/gwt-parent/minesweeper-gwt</a></p>
+<p><b>URL: </b><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock/gwt-parent/phonebill-gwt">http://www.cs.pdx.edu/~whitlock/gwt-parent/phonebill-gwt</a></p>
 <p><b>Project License: </b>No license is defined for this project.</p></td></tr></table></div>
 <ul>
 <li>edu.pdx.cs410J:projects:jar:Summer2015 (compile) <img id="_img3" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_dep2', '_img3' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_dep2" style="display:none">
