--- a/dependency-info.html
+++ b/dependency-info.html
@@ -104,39 +104,39 @@
 <h3>Apache Maven<a name="Apache_Maven"></a></h3><a name="Apache_Maven"></a>
 <div class="source">
 <pre>&lt;dependency&gt;
-  &lt;groupId&gt;edu.pdx.cs410J.minesweeper&lt;/groupId&gt;
-  &lt;artifactId&gt;minesweeper-gwt&lt;/artifactId&gt;
+  &lt;groupId&gt;edu.pdx.cs410J.whitlock&lt;/groupId&gt;
+  &lt;artifactId&gt;phonebill-gwt&lt;/artifactId&gt;
   &lt;version&gt;Summer2015&lt;/version&gt;
   &lt;type&gt;war&lt;/type&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Apache Buildr<a name="Apache_Buildr"></a></h3><a name="Apache_Buildr"></a>
 <div class="source">
-<pre>'edu.pdx.cs410J.minesweeper:minesweeper-gwt:war:Summer2015'</pre></div></div>
+<pre>'edu.pdx.cs410J.whitlock:phonebill-gwt:war:Summer2015'</pre></div></div>
 <div class="section">
 <h3>Apache Ivy<a name="Apache_Ivy"></a></h3><a name="Apache_Ivy"></a>
 <div class="source">
-<pre>&lt;dependency org=&quot;edu.pdx.cs410J.minesweeper&quot; name=&quot;minesweeper-gwt&quot; rev=&quot;Summer2015&quot;&gt;
-  &lt;artifact name=&quot;minesweeper-gwt&quot; type=&quot;war&quot; /&gt;
+<pre>&lt;dependency org=&quot;edu.pdx.cs410J.whitlock&quot; name=&quot;phonebill-gwt&quot; rev=&quot;Summer2015&quot;&gt;
+  &lt;artifact name=&quot;phonebill-gwt&quot; type=&quot;war&quot; /&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Groovy Grape<a name="Groovy_Grape"></a></h3><a name="Groovy_Grape"></a>
 <div class="source">
 <pre>@Grapes(
-@Grab(group='edu.pdx.cs410J.minesweeper', module='minesweeper-gwt', version='Summer2015')
+@Grab(group='edu.pdx.cs410J.whitlock', module='phonebill-gwt', version='Summer2015')
 )</pre></div></div>
 <div class="section">
 <h3>Grails<a name="Grails"></a></h3><a name="Grails"></a>
 <div class="source">
-<pre>compile 'edu.pdx.cs410J.minesweeper:minesweeper-gwt:Summer2015'</pre></div></div>
+<pre>compile 'edu.pdx.cs410J.whitlock:phonebill-gwt:Summer2015'</pre></div></div>
 <div class="section">
 <h3>Leiningen<a name="Leiningen"></a></h3><a name="Leiningen"></a>
 <div class="source">
-<pre>[edu.pdx.cs410J.minesweeper/minesweeper-gwt &quot;Summer2015&quot;]</pre></div></div>
+<pre>[edu.pdx.cs410J.whitlock/phonebill-gwt &quot;Summer2015&quot;]</pre></div></div>
 <div class="section">
 <h3>SBT<a name="SBT"></a></h3><a name="SBT"></a>
 <div class="source">
-<pre>libraryDependencies += &quot;edu.pdx.cs410J.minesweeper&quot; % &quot;minesweeper-gwt&quot; % &quot;Summer2015&quot;</pre></div></div></div>
+<pre>libraryDependencies += &quot;edu.pdx.cs410J.whitlock&quot; % &quot;phonebill-gwt&quot; % &quot;Summer2015&quot;</pre></div></div></div>
       </div>
     </div>
     <div class="clear">
