--- a/project-summary.html
+++ b/project-summary.html
@@ -114,7 +114,7 @@
 <td>Example Java Code for CS410J: Advanced Java Programming at Portland State University</td></tr>
 <tr class="b">
 <td>Homepage</td>
-<td><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock/gwt-parent/minesweeper-gwt">http://www.cs.pdx.edu/~whitlock/gwt-parent/minesweeper-gwt</a></td></tr></table></div>
+<td><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock/gwt-parent/phonebill-gwt">http://www.cs.pdx.edu/~whitlock/gwt-parent/phonebill-gwt</a></td></tr></table></div>
 <div class="section">
 <h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
 <table border="0" class="bodyTable">
@@ -135,10 +135,10 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>GroupId</td>
-<td>edu.pdx.cs410J.minesweeper</td></tr>
+<td>edu.pdx.cs410J.whitlock</td></tr>
 <tr class="a">
 <td>ArtifactId</td>
-<td>minesweeper-gwt</td></tr>
+<td>phonebill-gwt</td></tr>
 <tr class="b">
 <td>Version</td>
 <td>Summer2015</td></tr>
@@ -147,7 +147,7 @@
 <td>war</td></tr>
 <tr class="b">
 <td>Java Version</td>
-<td>1.7</td></tr></table></div></div>
+<td>1.8</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
