wagon-git commit

--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -12,10 +12,7 @@
 
 		<ul>
 						<li>
-				<a href="edu/pdx/cs410J/minesweeper/MineFieldTest.html" target="classFrame">MineFieldTest</a>
-			</li>
-						<li>
-				<a href="edu/pdx/cs410J/minesweeper/MinesweeperGameTest.html" target="classFrame">MinesweeperGameTest</a>
+				<a href="edu/pdx/cs410J/whitlock/StudentTest.html" target="classFrame">StudentTest</a>
 			</li>
 			      </ul>
 
