--- a/jdepend-report.html
+++ b/jdepend-report.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>CS410J Phone Bill Project - JDepend Report Metrics</title>
+    <title>student - JDepend Report Metrics</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                CS410J Phone Bill Project
+                student
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-05-01</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="CS410J Phone Bill Project">CS410J Phone Bill Project</a>
+            <div class="xright">                    <a href="./" title="student">student</a>
               
                     
       </div>
@@ -50,10 +50,10 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                      <li class="collapsed">
+                                                                                                                                                                                                                                                                                                              <li class="collapsed">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                   </li>
-                                                                                                                                                                                          <li class="expanded">
+                                                                                                                                                                        <li class="expanded">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                     <ul>
                       <li class="none">
@@ -72,10 +72,7 @@
                           <a href="checkstyle.html" title="Checkstyle">Checkstyle</a>
             </li>
                       <li class="none">
-                          <a href="pmd.html" title="PMD Report">PMD Report</a>
-            </li>
-                      <li class="none">
-                          <a href="cpd.html" title="CPD Report">CPD Report</a>
+                          <a href="pmd.html" title="PMD">PMD</a>
             </li>
               </ul>
         </li>
@@ -105,18 +102,18 @@
 <th>D</th>
 <th>V</th></tr>
 <tr class="b">
-<td><a href="#edu.pdx.cs410J.minesweeper">edu.pdx.cs410J.minesweeper</a></td>
-<td>9</td>
-<td>8</td>
+<td><a href="#edu.pdx.cs410J.whitlock">edu.pdx.cs410J.whitlock</a></td>
+<td>1</td>
 <td>1</td>
 <td>0</td>
-<td>2</td>
-<td>11.0%</td>
+<td>0</td>
+<td>5</td>
+<td>0.0%</td>
 <td>100.0%</td>
-<td>11.0%</td>
+<td>0.0%</td>
 <td>1</td></tr></table><a name="packages"></a>
-<h2>Packages<a name="Packages"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><a name="edu.pdx.cs410J.minesweeper"></a>
-<h3>edu.pdx.cs410J.minesweeper<a name="edu.pdx.cs410J.minesweeper"></a></h3>
+<h2>Packages<a name="Packages"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><a name="edu.pdx.cs410J.whitlock"></a>
+<h3>edu.pdx.cs410J.whitlock<a name="edu.pdx.cs410J.whitlock"></a></h3>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Afferent Couplings</th>
@@ -126,10 +123,10 @@
 <th>Distance</th></tr>
 <tr class="b">
 <td>0</td>
-<td>2</td>
-<td>11.0%</td>
+<td>5</td>
+<td>0.0%</td>
 <td>100.0%</td>
-<td>11.0%</td></tr></table>
+<td>0.0%</td></tr></table>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Abstract Classes</th>
@@ -137,10 +134,10 @@
 <th>Used by Packages</th>
 <th>Uses Packages</th></tr>
 <tr class="b">
-<td>edu.pdx.cs410J.minesweeper.MinesweeperGame$MineGameGenerator<br /></td>
-<td>edu.pdx.cs410J.minesweeper.GameState<br />edu.pdx.cs410J.minesweeper.GameState$GameResult<br />edu.pdx.cs410J.minesweeper.MineField<br />edu.pdx.cs410J.minesweeper.MineFieldWithHints<br />edu.pdx.cs410J.minesweeper.MinesweeperGame<br />edu.pdx.cs410J.minesweeper.MinesweeperGameMainProgram$InvalidRowAndColumnException<br />edu.pdx.cs410J.minesweeper.MinesweeperGameMainProgram$RowAndColumn<br />edu.pdx.cs410J.minesweeper.RandomMinesweeperGameGenerator<br /></td>
 <td><i>None</i></td>
-<td>java.lang<br />java.util<br /></td></tr></table><a name="cycles"></a>
+<td>edu.pdx.cs410J.whitlock.Student<br /></td>
+<td><i>None</i></td>
+<td>edu.pdx.cs410J.lang<br />java.io<br />java.lang<br />java.text<br />java.util<br /></td></tr></table><a name="cycles"></a>
 <h2>Cycles<a name="Cycles"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><br />There are no cyclic dependencies.<br /><a name="explanations"></a>
 <h2>Explanation<a name="Explanation"></a></h2>[ <a href="#summary">summary</a> ] [ <a href="#packages">packages</a> ] [ <a href="#cycles">cycles</a> ] [ <a href="#explanations">explanations</a> ] <br /><br />The following explanations are for quick reference and are lifted directly from the original JDepend documentation.<br /><br />
 <table border="0" class="bodyTable">
