--- a/project-reports.html
+++ b/project-reports.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>CS410J Phone Bill Project - Generated Reports</title>
+    <title>student - Generated Reports</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                CS410J Phone Bill Project
+                student
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-05-01</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="CS410J Phone Bill Project">CS410J Phone Bill Project</a>
+            <div class="xright">                    <a href="./" title="student">student</a>
               
                     
       </div>
@@ -50,10 +50,10 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                      <li class="collapsed">
+                                                                                                                                                                                                                                                                                                              <li class="collapsed">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                   </li>
-                                                                                                                                                                                    <li class="expanded">
+                                                                                                                                                                  <li class="expanded">
             <strong>Project Reports</strong>
                   <ul>
                       <li class="none">
@@ -72,10 +72,7 @@
                           <a href="checkstyle.html" title="Checkstyle">Checkstyle</a>
             </li>
                       <li class="none">
-                          <a href="pmd.html" title="PMD Report">PMD Report</a>
-            </li>
-                      <li class="none">
-                          <a href="cpd.html" title="CPD Report">CPD Report</a>
+                          <a href="pmd.html" title="PMD">PMD</a>
             </li>
               </ul>
         </li>
@@ -114,11 +111,8 @@
 <td><a href="checkstyle.html">Checkstyle</a></td>
 <td>Report on coding style conventions.</td></tr>
 <tr class="a">
-<td><a href="pmd.html">PMD Report</a></td>
-<td>Verification of coding rules.</td></tr>
-<tr class="b">
-<td><a href="cpd.html">CPD Report</a></td>
-<td>Duplicate code detection.</td></tr></table></div></div>
+<td><a href="pmd.html">PMD</a></td>
+<td>Verification of coding rules.</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
