--- a/surefire-report.html
+++ b/surefire-report.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>CS410J Phone Bill Project - Surefire Report</title>
+    <title>student - Surefire Report</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                CS410J Phone Bill Project
+                student
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-05-01</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="CS410J Phone Bill Project">CS410J Phone Bill Project</a>
+            <div class="xright">                    <a href="./" title="student">student</a>
               
                     
       </div>
@@ -50,10 +50,10 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                      <li class="collapsed">
+                                                                                                                                                                                                                                                                                                              <li class="collapsed">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                   </li>
-                                                                                                                                                                                          <li class="expanded">
+                                                                                                                                                                        <li class="expanded">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                     <ul>
                       <li class="none">
@@ -72,10 +72,7 @@
                           <a href="checkstyle.html" title="Checkstyle">Checkstyle</a>
             </li>
                       <li class="none">
-                          <a href="pmd.html" title="PMD Report">PMD Report</a>
-            </li>
-                      <li class="none">
-                          <a href="cpd.html" title="CPD Report">CPD Report</a>
+                          <a href="pmd.html" title="PMD">PMD</a>
             </li>
               </ul>
         </li>
@@ -89,12 +86,29 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section">
+        <script type="text/javascript">
+//<![CDATA[
+function toggleDisplay(elementId) {
+ var elm = document.getElementById(elementId + 'error');
+ if (elm && typeof elm.style != "undefined") {
+ if (elm.style.display == "none") {
+ elm.style.display = "";
+ document.getElementById(elementId + 'off').style.display = "none";
+ document.getElementById(elementId + 'on').style.display = "inline";
+ } else if (elm.style.display == "") { elm.style.display = "none";
+ document.getElementById(elementId + 'off').style.display = "inline";
+ document.getElementById(elementId + 'on').style.display = "none";
+ } 
+ } 
+ }
+//]]>
+</script>
+<div class="section">
 <h2>Surefire Report<a name="Surefire_Report"></a></h2></div>
 <div class="section">
 <h2>Summary<a name="Summary"></a></h2><a name="Summary"></a>
 <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
-<table border="0" class="bodyTable">
+<table border="1" class="bodyTable">
 <tr class="a">
 <th>Tests</th>
 <th>Errors </th>
@@ -103,17 +117,17 @@
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td>31</td>
+<td>12</td>
 <td>0</td>
 <td>0</td>
-<td>0</td>
-<td>100%</td>
-<td>0.064</td></tr></table><br />
+<td>1</td>
+<td>91.667%</td>
+<td>0.032</td></tr></table><br />
 <p>Note: failures are anticipated and checked for with assertions while errors are unanticipated.</p><br /></div>
 <div class="section">
 <h2>Package List<a name="Package_List"></a></h2><a name="Package_List"></a>
 <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
-<table border="0" class="bodyTable">
+<table border="1" class="bodyTable">
 <tr class="a">
 <th>Package</th>
 <th>Tests</th>
@@ -123,17 +137,17 @@
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td><a href="#edu.pdx.cs410J.minesweeper">edu.pdx.cs410J.minesweeper</a></td>
-<td>31</td>
+<td><a href="#edu.pdx.cs410J.whitlock">edu.pdx.cs410J.whitlock</a></td>
+<td>12</td>
 <td>0</td>
 <td>0</td>
-<td>0</td>
-<td>100%</td>
-<td>0.064</td></tr></table><br />
+<td>1</td>
+<td>91.667%</td>
+<td>0.032</td></tr></table><br />
 <p>Note: package statistics are not computed recursively, they only sum up all of its testsuites numbers.</p>
 <div class="section">
-<h3>edu.pdx.cs410J.minesweeper<a name="edu.pdx.cs410J.minesweeper"></a></h3><a name="edu.pdx.cs410J.minesweeper"></a>
-<table border="0" class="bodyTable">
+<h3>edu.pdx.cs410J.whitlock<a name="edu.pdx.cs410J.whitlock"></a></h3><a name="edu.pdx.cs410J.whitlock"></a>
+<table border="1" class="bodyTable">
 <tr class="a">
 <th></th>
 <th>Class</th>
@@ -144,156 +158,83 @@
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td><a href="#edu.pdx.cs410J.minesweeperMineFieldTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
-<td><a href="#edu.pdx.cs410J.minesweeperMineFieldTest">MineFieldTest</a></td>
-<td>23</td>
+<td><a href="#edu.pdx.cs410J.whitlockStudentTest"><img src="images/icon_warning_sml.gif" alt="" /></a></td>
+<td><a href="#edu.pdx.cs410J.whitlockStudentTest">StudentTest</a></td>
+<td>12</td>
 <td>0</td>
 <td>0</td>
-<td>0</td>
-<td>100%</td>
-<td>0.016</td></tr>
-<tr class="a">
-<td><a href="#edu.pdx.cs410J.minesweeperMinesweeperGameTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
-<td><a href="#edu.pdx.cs410J.minesweeperMinesweeperGameTest">MinesweeperGameTest</a></td>
-<td>8</td>
-<td>0</td>
-<td>0</td>
-<td>0</td>
-<td>100%</td>
-<td>0.048</td></tr></table></div><br /></div>
+<td>1</td>
+<td>91.667%</td>
+<td>0.032</td></tr></table></div><br /></div>
 <div class="section">
 <h2>Test Cases<a name="Test_Cases"></a></h2><a name="Test_Cases"></a>
 <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p>
 <div class="section">
-<h3>MineFieldTest<a name="MineFieldTest"></a></h3><a name="edu.pdx.cs410J.minesweeperMineFieldTest"></a>
-<table border="0" class="bodyTable">
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>spaceSurroundedByMines</td>
-<td>0.004</td></tr>
+<h3>StudentTest<a name="StudentTest"></a></h3><a name="edu.pdx.cs410J.whitlockStudentTest"></a>
+<table border="1" class="bodyTable">
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>mineToLeftAboveAndNorthWestOfSpace</td>
-<td>0</td></tr>
+<td>studentNamedDaveHasNameOfDave</td>
+<td>0.02</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>oneMineOneSpaceInOneRow</td>
-<td>0</td></tr>
+<td>invokingMainWithNoArgumentsHasExitCodeOf1</td>
+<td>0.009</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>twoMinesInOneRow</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>mineToRightBelowAndSouthEastOfSpace</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>oneByOneMineFieldWithOneMineHasOneMine</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>mineToLeftBelowAndSouthWestOfSpace</td>
-<td>0.001</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>oneMineOneSpaceInOneRowMineToTheRightOfSpace</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>nonZeroByZeroThrowsIllegalArgumentException</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>zeroByZeroMineFieldThrowsIllegalArgumentException</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>oneMineOneSpaceInOneColumnMineAboveSpace</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>moreThan100ColumnsThrowsIllegalArgumentException</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>oneByOneMineFieldWithNoMinesHasZeroMines</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>convertListOfStringIntoCharMatrix</td>
-<td>0.01</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>moreThan100RowsThrowsIllegalArgumentException</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>oneMineOneSpaceInOneColumnMineBelowSpace</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>noMinesInOneRow</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>twoMinesAboveAndBelowASpace</td>
-<td>0</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>twoMinesOnEitherSideOfASpace</td>
-<td>0</td></tr>
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>nonZeroByNonZeroIsOkay</td>
+<td>gpaOf3point999DisplaysAs4point00</td>
 <td>0.001</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>mineToRightAndBelowSpace</td>
-<td>0</td></tr>
+<td>allStudentsSayThisClassIsTooMuchWork</td>
+<td>0.001</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>zeroByNonZeroThrowsIllegalArgumentException</td>
+<td>invokingMainWithNoArgumentsPrintsMissingArgumentsToStandardError</td>
 <td>0</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>mineToRightAboveAndNorthEastOfSpace</td>
-<td>0</td></tr></table></div>
-<div class="section">
-<h3>MinesweeperGameTest<a name="MinesweeperGameTest"></a></h3><a name="edu.pdx.cs410J.minesweeperMinesweeperGameTest"></a>
-<table border="0" class="bodyTable">
-<tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>probeEmptyFieldRevealsAllAndWinsGame</td>
-<td>0.048</td></tr>
-<tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>probe3x3GridWithMineInTopLeftRevealsALot</td>
+<td>studentNamedFrankHasNameOfFrank</td>
 <td>0</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>probeEmpty1x1GridWinsGame</td>
+<td>unparsableGPAResultsInErrorMessage</td>
 <td>0</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>probe2x2GridWithMinesInCornersReveals2AndGameIsStillInProgress</td>
+<td>wholeNumberGPAPrintsWithTwoDecimalPlace</td>
 <td>0</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>probe1x1GridWithBombLosesGame</td>
+<td>invokingMainWithOnlyOneArgumentPrintsMissingGenderToStandardError</td>
 <td>0</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>losingGameRevealsAllCells</td>
+<td>studentWhoTakesThreeClassesSpecifiesTheyTake3Classes</td>
 <td>0</td></tr>
 <tr class="a">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>probeSurroundedSpaceReveals8AndOtherCellsAreMines</td>
-<td>0</td></tr>
+<td><a href="#edu.pdx.cs410J.whitlock.StudentTest.studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJava"><img src="images/icon_warning_sml.gif" alt="" /></a></td>
+<td><a href="#edu.pdx.cs410J.whitlock.StudentTest.studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJava">studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJava</a>
+<div class="detailToggle" style="display:inline"><a href="javascript:toggleDisplay(&apos;edu_pdx_cs410J_whitlock_StudentTest_studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJava&apos;);"><span style="display:inline;" id="edu_pdx_cs410J_whitlock_StudentTest_studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJavaoff"> + </span><span style="display:none;" id="edu_pdx_cs410J_whitlock_StudentTest_studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJavaon"> - </span>[ Detail ]</a></div></td>
+<td>0.001</td></tr>
 <tr class="b">
+<td></td>
+<td>skipped</td>
+<td></td></tr>
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>whenOnlyUnprobedMinesRemainGameIsWon</td>
+<td>studentWithGPAof314</td>
 <td>0</td></tr></table></div><br /></div>
+<div class="section">
+<h2>Failure Details<a name="Failure_Details"></a></h2><a name="Failure_Details"></a>
+<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
+<table border="1" class="bodyTable">
+<tr class="a">
+<td><img src="images/icon_warning_sml.gif" alt="" /></td>
+<td><a name="edu.pdx.cs410J.whitlock.StudentTest.studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJava"></a>studentToStringOfDavemale3_64AlgorithmsOperatingSystemsJava</td></tr>
+<tr class="b">
+<td></td>
+<td>skipped: skipped</td></tr></table><br /></div>
       </div>
     </div>
     <div class="clear">
