--- a/xref-test/edu/pdx/cs410J/whitlock/package-frame.html
+++ b/xref-test/edu/pdx/cs410J/whitlock/package-frame.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>PortlandStateJavaSummer2015 Summer2015 Reference Package edu.pdx.cs410J.whitlock</title>
+		<title>student 1.0-SNAPSHOT Reference Package edu.pdx.cs410J.whitlock</title>
 		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,15 +16,6 @@
 
       	<ul>
       		          	<li>
-            	<a href="PhoneBillRestClientTest.html" target="classFrame">PhoneBillRestClientTest</a>
-          	</li>
-          	          	<li>
-            	<a href="PhoneBillServletTest.html" target="classFrame">PhoneBillServletTest</a>
-          	</li>
-          	          	<li>
-            	<a href="Project4Test.html" target="classFrame">Project4Test</a>
-          	</li>
-          	          	<li>
             	<a href="StudentTest.html" target="classFrame">StudentTest</a>
           	</li>
           	      	</ul>
