--- a/xref-test/edu/pdx/cs410J/whitlock/package-summary.html
+++ b/xref-test/edu/pdx/cs410J/whitlock/package-summary.html
@@ -1,9 +1,9 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>PortlandStateJavaSummer2015 Summer2015 Reference Package edu.pdx.cs410J.whitlock</title>
+		<title>student 1.0-SNAPSHOT Reference Package edu.pdx.cs410J.whitlock</title>
 		<link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -37,21 +37,6 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="PhoneBillRestClientTest.html" target="classFrame">PhoneBillRestClientTest</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="PhoneBillServletTest.html" target="classFrame">PhoneBillServletTest</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Project4Test.html" target="classFrame">Project4Test</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
                 		<a href="StudentTest.html" target="classFrame">StudentTest</a>
               		</td>
             	</tr>
@@ -77,8 +62,6 @@
         	</ul>
       	</div>
 				<hr />
-		<div id="footer">
-			Copyright &#169; 2015&#x2013;2016 <a href="http://www.pdx.edu">Portland State University</a>. All rights reserved.
-		</div>
+		Copyright &#169; 2000-2016 Portland State University. All Rights Reserved.
 	</body>
 </html>
