--- a/xref-test/overview-frame.html
+++ b/xref-test/overview-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</title>
+		<title>student 1.0-SNAPSHOT Reference</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,7 +16,7 @@
 
 		<ul>
 						<li>
-				<a href="edu/pdx/cs410J/minesweeper/package-frame.html" target="packageFrame">edu.pdx.cs410J.minesweeper</a>
+				<a href="edu/pdx/cs410J/whitlock/package-frame.html" target="packageFrame">edu.pdx.cs410J.whitlock</a>
 			</li>
 					</ul>
 
