--- a/xref-test/overview-summary.html
+++ b/xref-test/overview-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</title>
+		<title>student 1.0-SNAPSHOT Reference</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -24,7 +24,7 @@
 	        </ul>
       	</div>
 		
-		      	<h2>CS410J Phone Bill Project 1.0-SNAPSHOT Reference</h2>
+		      	<h2>student 1.0-SNAPSHOT Reference</h2>
 
 		<table class="summary">
         	<thead>
@@ -35,7 +35,7 @@
         	<tbody>
     	    	            	<tr>
               		<td>
-                		<a href="edu/pdx/cs410J/minesweeper/package-summary.html">edu.pdx.cs410J.minesweeper</a>
+                		<a href="edu/pdx/cs410J/whitlock/package-summary.html">edu.pdx.cs410J.whitlock</a>
               		</td>
             	</tr>
 	          	        	</tbody>
